# materials-investigator

./: .gitignore  README.md  pyproject.toml
documents/: paper.tex
experiments/: plot_reliability.py  run_reliability_grid.py
src/investigator/: agent.py  cli.py  store.py  types.py
src/investigator/tools/: synthetic_oracle.py
